# rust-sqlx-example

./: .env  Cargo.toml  README.md  compose.yaml
db/: schema.sql
src/: lib.rs  main.rs
