[package]
name = "rust-sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.36.0", features = ["full"] }
