[package]
name = "rust-sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.38.2", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
